--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Studio Ghibli"
+      content="Food recipes"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -32,7 +32,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <title>Studio Ghibli</title>
+    <title>Fud.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
