--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <title>Fud</title>
+    <title>Cheff</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
