--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Food recipes"
+      name="title"
+      content="Cheff"
     />
+    <meta
+      name="description"
+      content="Food recipes made simple."
+    />
+    <meta property="og:image" content="https://houm.vercel.app/recipe_hero.jpg">
+    <meta property="twitter:image" content="https://houm.vercel.app/recipe_hero.jpg">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
