--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      media="print" onload="this.media='all'"
     />
     <title>Cheff</title>
   </head>
